gio: GVariantBuilder builder leaked in g_document_portal_add_documents when URI list is empty
Just noticed this when running gnome-shell in valgrind:
==232979== 64 bytes in 1 blocks are definitely lost in loss record 20,198 of 35,387
==232979== at 0x484A464: calloc (vg_replace_malloc.c:1328)
==232979== by 0x4D72DD8: g_malloc0 (gmem.c:157)
==232979== by 0x4DADD8E: g_variant_builder_init (gvariant.c:3494)
==232979== by 0x4C14287: g_document_portal_add_documents (gdocumentportal.c:119)
==232979== by 0x4BB7030: g_desktop_app_info_launch_uris_with_dbus.isra.0 (gdesktopappinfo.c:3185)
==232979== by 0x4BB7536: g_desktop_app_info_launch_uris_internal (gdesktopappinfo.c:3227)
==232979== by 0x4BB7536: g_desktop_app_info_launch_uris_as_manager_with_fds (gdesktopappinfo.c:3486)
==232979== by 0x48794C6: shell_app_launch (shell-app.c:1455)
==232979== by 0x48797AD: shell_app_activate_full (shell-app.c:553)
builder
seems to be leaked in case g_unix_fd_list_get_length (fd_list) == 0
in g_document_portal_add_documents()
.